@@ -3,6 +3,7 @@
 	* src/racoon/isakmp_var.h: remove duplicate declaration
 	* src/racoon/session.c: initfds() needs to be called only if
 	  monitored file descriptor numbers have changed
+	* src/racoon/grabmyaddr.c: fix indentation issues for readability
 
 2008-08-06  Timo Teras  <timo.teras@iki.fi>
 	From Krzysztof Piotr Oledzki <olel@ans.pl>:
